<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/zaloguj_sie"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/exit_app"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:layout_marginTop="5dp"
            android:background="@drawable/exit_login"
            android:onClick="exitAppFromLoginWindow" />
    </GridLayout>

    <EditText
        android:id="@+id/personal_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_for_entry"
        android:hint="@string/nazwa_uzytkownika_login_panel"
        android:inputType="textEmailAddress"
        android:maxLength="30"
        android:textColor="@color/plain_white"
        android:textColorHint="@color/plain_white"
        android:textCursorDrawable="@color/colorAccent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/shape_for_entry"
        android:hint="@string/haslo_login_panel"
        android:inputType="textPassword"
        android:maxLength="8"
        android:textColor="@color/plain_white"
        android:textColorHint="@color/plain_white"
        android:textCursorDrawable="@color/colorAccent" />

    <CheckBox
        android:id="@+id/auto_login_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/zapamietaj_moje_dane" />

    <Button
        android:id="@+id/but_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:text="@string/start"
        android:textColor="@android:color/white"
        android:textSize="20sp" />
</LinearLayout>