<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageViewMedicines"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:background="@layout/border_for_list_of_medicines"
        android:padding="4dp"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/medicine_icon" />

    <EditText
        android:id="@+id/edtMedicine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_for_entry"
        android:fontFamily="sans-serif-light"
        android:hint="@string/nazwa_leku_update"
        android:inputType="textPersonName"
        android:maxLength="25"
        android:textColor="@color/plain_white"
        android:textColorHint="@color/plain_white"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edtDose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_for_entry"
        android:fontFamily="sans-serif-light"
        android:hint="@string/dawka_update"
        android:inputType="textPersonName"
        android:maxLength="10"
        android:textColor="@color/plain_white"
        android:textColorHint="@color/plain_white"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edtFrequency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_for_entry"
        android:fontFamily="sans-serif-light"
        android:hint="@string/czestotliwosc_update"
        android:inputType="textPersonName"
        android:maxLength="15"
        android:textColor="@color/plain_white"
        android:textColorHint="@color/plain_white"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edtPlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_for_entry"
        android:fontFamily="sans-serif-light"
        android:hint="@string/miejsce_leku_update"
        android:inputType="textPersonName"
        android:maxLength="15"
        android:textColor="@color/plain_white"
        android:textColorHint="@color/plain_white"
        android:textSize="30sp" />

    <android.support.v7.widget.CardView
        android:id="@+id/btnUpdate"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="12dp"
        app:cardElevation="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-light"
                android:text="@string/zaktualizuj"
                android:textColor="#000"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</GridLayout>