<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_icon"
    android:scrollbarStyle="outsideOverlay">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/list_padding_vertical_small"
            android:text="@string/time"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            tools:text="Time" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/list_padding_vertical_small"
            android:background="@drawable/divider" />

        <TimePicker
            android:id="@+id/edit_alarm_time_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:timePickerMode="spinner" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/list_padding_vertical_small"
            android:text="@string/label"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            tools:text="Label" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/list_padding_vertical_small"
            android:background="@drawable/divider" />

        <EditText
            android:id="@+id/edit_alarm_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@drawable/shape_for_entry"
            android:hint="@string/add_label_hint"
            android:inputType="textCapWords"
            android:maxLength="30"
            android:textColor="@color/plain_white"
            android:textColorHint="@color/plain_white"
            android:textStyle="italic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/list_padding_vertical_small"
            android:text="@string/image_alarm"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            tools:text="Zdjęcie leku" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/list_padding_vertical_small"
            android:background="@drawable/divider" />

        <ImageView
            android:id="@+id/image_of_medicine"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:scaleType="centerInside" />

        <android.support.v7.widget.CardView
            android:id="@+id/choose_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/wybierz_zdjecie"
                    android:textColor="#000000"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </android.support.v7.widget.CardView>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/list_padding_vertical_small"
            android:text="@string/days"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            tools:text="Days" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/list_padding_vertical_small"
            android:background="@drawable/divider" />

        <android.support.v7.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:columnCount="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                android:background="@drawable/shape_for_entry"
                android:text="@string/monday"
                android:textColor="@color/plain_white"
                android:textColorHint="@color/plain_white"
                android:textSize="20sp"
                app:layout_gravity="center_vertical|fill_horizontal"
                tools:text="Monday" />

            <CheckBox
                android:id="@+id/edit_alarm_mon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                app:layout_gravity="center_vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                android:background="@drawable/shape_for_entry"
                android:text="@string/tuesday"
                android:textColor="@color/plain_white"
                android:textColorHint="@color/plain_white"
                android:textSize="20sp"
                app:layout_gravity="center_vertical|fill_horizontal"
                tools:text="Tuesday" />

            <CheckBox
                android:id="@+id/edit_alarm_tues"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                app:layout_gravity="center_vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                android:background="@drawable/shape_for_entry"
                android:text="@string/wednesday"
                android:textColor="@color/plain_white"
                android:textColorHint="@color/plain_white"
                android:textSize="20sp"
                app:layout_gravity="center_vertical|fill_horizontal"
                tools:text="Wednesday" />

            <CheckBox
                android:id="@+id/edit_alarm_wed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                app:layout_gravity="center_vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                android:background="@drawable/shape_for_entry"
                android:text="@string/thursday"
                android:textColor="@color/plain_white"
                android:textColorHint="@color/plain_white"
                android:textSize="20sp"
                app:layout_gravity="center_vertical|fill_horizontal"
                tools:text="Thursday" />

            <CheckBox
                android:id="@+id/edit_alarm_thurs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                app:layout_gravity="center_vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                android:background="@drawable/shape_for_entry"
                android:text="@string/friday"
                android:textColor="@color/plain_white"
                android:textColorHint="@color/plain_white"
                android:textSize="20sp"
                app:layout_gravity="center_vertical|fill_horizontal"
                tools:text="Friday" />

            <CheckBox
                android:id="@+id/edit_alarm_fri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                app:layout_gravity="center_vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                android:background="@drawable/shape_for_entry"
                android:text="@string/saturday"
                android:textColor="@color/plain_white"
                android:textColorHint="@color/plain_white"
                android:textSize="20sp"
                app:layout_gravity="center_vertical|fill_horizontal"
                tools:text="Saturday" />

            <CheckBox
                android:id="@+id/edit_alarm_sat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                app:layout_gravity="center_vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                android:background="@drawable/shape_for_entry"
                android:text="@string/sunday"
                android:textColor="@color/plain_white"
                android:textColorHint="@color/plain_white"
                android:textSize="20sp"
                app:layout_gravity="center_vertical|fill_horizontal"
                tools:text="Sunday" />

            <CheckBox
                android:id="@+id/edit_alarm_sun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_padding_vertical_small"
                app:layout_gravity="center_vertical" />


        </android.support.v7.widget.GridLayout>

    </LinearLayout>

</ScrollView>